# az-sso

./: .env.template  pyproject.toml
src/: app.py  user.py
