[tool.poetry]
name = "az-sso"
version = "0.1.0"
description = ""
authors = ["Jack Mead <jack-mead@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.3"
Flask-Login = "^0.6.1"
python-dotenv = "^0.20.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
